--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 			
 			<h2 id="feedback">Make your Guess!</h2>
 
-			<form>
+			<div class="mainArea">
 				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" placeholder="Enter your Guess" required/>
-      			<input type="submit" id="guessButton" class="button" name="submit" value="Guess"/>
-			</form>
+      			<input type="submit" id="guessButton" class="button buttonHover" name="submit" value="Guess"/>
+			</div>
 			
       		<p>Guess #<span id="count">0</span>!</p>
 			
